<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blur"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".main.MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/coronacases"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_heading"></TextView>

            <TextView
                android:id="@+id/tv_currentcases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_heading_numbers"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/recovered"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_heading"></TextView>

            <TextView
                android:id="@+id/tv_recoveredcases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@color/totalRecovered"
                android:textSize="@dimen/text_heading_numbers"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/death"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_heading"></TextView>

            <TextView
                android:id="@+id/tv_deaths"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_heading_numbers"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_24dp"
                android:layout_weight="0.5"
                android:background="@drawable/border"
                android:gravity="center"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:gravity="center"
                    android:padding="@dimen/main_margin"
                    android:text="@string/active_cases"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_14sp" />

                <TextView
                    android:id="@+id/tv_active_cases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/under_line"
                    android:gravity="center"
                    android:paddingTop="@dimen/layout_padding_16dp"
                    android:paddingBottom="@dimen/layout_padding_16dp"
                    android:text="12132424"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_24dp"
                android:layout_weight="0.5"
                android:background="@drawable/border"
                android:gravity="center"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:gravity="center"
                    android:padding="@dimen/main_margin"
                    android:text="@string/closed_cases"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_14sp" />

                <TextView
                    android:id="@+id/tv_closed_cases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/under_line"
                    android:gravity="center"
                    android:paddingTop="@dimen/layout_padding_16dp"
                    android:paddingBottom="@dimen/layout_padding_16dp"
                    android:text="12132424"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
